Rimozione di controlli non necessari nelle service
Refactoring del metodo getWeatherForecast